1. About -> Index. 2. Fix whitespace on Day page. 3. Proper redirects + cleanup.

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,19 +1,25 @@
 .container {
   margin: auto;
   max-width: 500px;
-  font-family: sans-serif;
+  font-family: -apple-system, Roboto, sans-serif, serif;
+  color: #232129;
+  padding: 96;
 }
+
 .heading {
   color: cornflowerblue;
 }
+
 .nav-links {
   display: flex;
   list-style: none;
   padding-left: 0;
 }
+
 .nav-link-item {
   padding-right: 2rem;
 }
+
 .nav-link-text {
   color: gray;
 }
